[kitchen]首页添加底部tab列表

--- a/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/con_blue</color>
+    <color name="colorPrimaryDark">@color/con_blue</color>
+    <color name="colorAccent">@color/con_blue</color>
+
+    <color name="main_bottom_textView_normal">#999999</color>
+    <color name="main_bottom_textView_pressed">#5AB5EE</color>
+
+
+    <!--Primary color-->
+    <color name="con_blue">#2B77C1</color>
+    <color name="con_middle_blue">#7AAAD9</color>
+
 </resources>
