--- a/QianJiaJia-kitchen/app/src/main/res/values/dimens.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/dimens.xml
@@ -1,5 +1,35 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- typical spacing between two views -->
+    <dimen name="spacing_huge">40dp</dimen>
+    <dimen name="spacing_large">24dp</dimen>
+    <dimen name="spacing_normal">14dp</dimen>
+    <dimen name="spacing_small">10dp</dimen>
+    <dimen name="spacing_tiny">4dp</dimen>
+
+    <!-- Default screen margins -->
+    <dimen name="spacing_margin_micro">4dp</dimen>
+    <dimen name="spacing_margin_normal">8dp</dimen>
+    <dimen name="spacing_margin_double">16dp</dimen>
+    <dimen name="spacing_margin_third">32dp</dimen>
+    <dimen name="spacing_margin_huge">72dp</dimen>
+    <dimen name="spacing_margin_huger">180dp</dimen>
+
+    <!-- Default screen padding -->
+    <dimen name="spacing_padding_nano">2dp</dimen>
+    <dimen name="spacing_padding_micro">4dp</dimen>
+    <dimen name="spacing_padding_micro2">6dp</dimen>
+    <dimen name="spacing_padding_normal">8dp</dimen>
+    <dimen name="spacing_padding_normal2">12dp</dimen>
+    <dimen name="spacing_padding_double">16dp</dimen>
+    <dimen name="spacing_padding_double2">20dp</dimen>
+    <dimen name="spacing_padding_third">32dp</dimen>
+    <dimen name="spacing_padding_third2">48dp</dimen>
+    <dimen name="spacing_padding_huge">72dp</dimen>
+
+    <!-- typical sizes of views -->
+    <dimen name="button_height_tall">60dp</dimen>
+    <dimen name="button_height_normal">40dp</dimen>
+    <dimen name="button_height_short">32dp</dimen>
+
 </resources>
