--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_kitchen_main_bottombar.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_kitchen_main_bottombar.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="58dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:layout_height="58dp">
 
     <RadioGroup
         android:id="@+id/rdoGrp_tab_list"
