--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_main.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context="com.jiajiaqian.kitchen.ui.MainActivity">
 
     <FrameLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
