【kitchen】我页布局以及我的资料，收货地址，设置等页面的布局。

--- a/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
@@ -16,5 +16,7 @@
     <color name="con_font_gray2">#E5E5E5</color>
     <color name="con_yellow">#FFB22F</color>
 
+    <color name="dis_add_bt">#06aff1</color>
+
 
 </resources>
