--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address.xml
@@ -1,216 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-    <include layout="@layout/activity_top_bar"/>
-
-    <View
-        android:id="@+id/view_info_address_one"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+    <include
+        android:id="@+id/address_list"
+        layout="@layout/activity_top_bar" />
+    <RelativeLayout
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/rl_add_address"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginTop="50dp"
-        android:background="#e1e4e5"/>
-
-    <LinearLayout
+        android:layout_height="40dp">
+        <Button
+            android:id="@+id/bt_add_address_list"
+            android:layout_width="140dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:background="#0e932e"
+            android:text="新增收货地址"
+            android:textColor="#ffffff"/>
+    </RelativeLayout>
+    <ListView
+        android:id="@+id/lv_add_address_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/view_info_address_one"
-        android:orientation="vertical">
-        <RelativeLayout
-            android:id="@+id/rl_personal_info_address"
-            android:layout_width="match_parent"
-            android:layout_height="480dp"
-            android:layout_gravity="center_vertical"
-            android:background="#ffffff">
-            <TextView
-            android:id="@+id/tv_info_address_name"
-            android:layout_width="120dp"
-            android:layout_height="60dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:gravity="center_vertical"
-            android:text="收货人："
-            android:textColor="#444444"
-            android:textSize="20sp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_toRightOf="@id/tv_info_address_name"
-                android:gravity="center_vertical"
-                android:hint="请输入用户名称"
-                android:textColor="#2c2c2c"
-                android:textSize="20sp"/>
-            <View
-                android:id="@+id/view_info_address_two"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_below="@id/tv_info_address_name"
-                android:background="#e1e4e5"/>
-            <TextView
-                android:layout_below="@id/view_info_address_two"
-                android:id="@+id/tv_info_address_phone"
-                android:layout_width="120dp"
-                android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:gravity="center_vertical"
-                android:text="收货电话："
-                android:textColor="#444444"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:layout_below="@id/view_info_address_two"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_toRightOf="@id/tv_info_address_phone"
-                android:gravity="center_vertical"
-                android:hint="请输入用户联系电话"
-                android:textColor="#2c2c2c"
-                android:textSize="20sp"/>
-            <View
-                android:id="@+id/view_info_address_three"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_below="@id/tv_info_address_phone"
-                android:background="#e1e4e5"/>
-            <TextView
-                android:layout_below="@id/view_info_address_three"
-                android:id="@+id/tv_info_address_city"
-                android:layout_width="120dp"
-                android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:gravity="center_vertical"
-                android:text="所在城市："
-                android:textColor="#444444"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:layout_below="@id/view_info_address_three"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_toRightOf="@id/tv_info_address_city"
-                android:gravity="center_vertical"
-                android:hint="请选择所在城市"
-                android:textColor="#2c2c2c"
-                android:textSize="20sp"/>
-            <View
-                android:id="@+id/view_info_address_four"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_below="@id/tv_info_address_city"
-                android:background="#e1e4e5"/>
-            <TextView
-                android:layout_below="@id/view_info_address_four"
-                android:id="@+id/tv_info_address_address"
-                android:layout_width="120dp"
-                android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:gravity="center_vertical"
-                android:text="收货地址："
-                android:textColor="#444444"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:layout_below="@id/view_info_address_four"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_toRightOf="@id/tv_info_address_address"
-                android:gravity="center_vertical"
-                android:hint="请输入用户名称"
-                android:textColor="#2c2c2c"
-                android:textSize="20sp"/>
-            <View
-                android:id="@+id/view_info_address_five"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_below="@id/tv_info_address_address"
-                android:background="#e1e4e5"/>
-            <TextView
-                android:layout_below="@id/view_info_address_five"
-                android:id="@+id/tv_info_address_number"
-                android:layout_width="120dp"
-                android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:gravity="center_vertical"
-                android:text="门牌号："
-                android:textColor="#444444"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:layout_below="@id/view_info_address_five"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_toRightOf="@id/tv_info_address_number"
-                android:gravity="center_vertical"
-                android:hint="请输入用户名称"
-                android:textColor="#2c2c2c"
-                android:textSize="20sp"/>
-            <View
-                android:id="@+id/view_info_address_six"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_below="@id/tv_info_address_number"
-                android:background="#e1e4e5"/>
-            <TextView
-                android:layout_below="@id/view_info_address_six"
-                android:id="@+id/tv_info_address_type"
-                android:layout_width="120dp"
-                android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:gravity="center_vertical"
-                android:text="地址类型："
-                android:textColor="#444444"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:layout_below="@id/view_info_address_six"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_toRightOf="@id/tv_info_address_type"
-                android:gravity="center_vertical"
-                android:hint="请输入用户名称"
-                android:textColor="#2c2c2c"
-                android:textSize="20sp"/>
-            <View
-                android:id="@+id/view_info_address_serven"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_below="@id/tv_info_address_type"
-                android:background="#e1e4e5"/>
-
-            <Button
-                android:id="@+id/bt_personal_info_address"
-                android:layout_below="@id/view_info_address_serven"
-                android:layout_width="160dp"
-                android:layout_height="40dp"
-                android:text="添加新的收货地址"
-                android:textSize="16sp"
-                android:textColor="#ffffff"
-                android:background="@drawable/btn_shape"
-                android:layout_gravity="center_horizontal"
-                android:layout_centerHorizontal="true"/>
-        </RelativeLayout>
-
-    </LinearLayout>
-
-
+        android:layout_below="@id/address_list"
+        android:layout_above="@id/rl_add_address"
+        android:dividerHeight="5dp"
+        android:cacheColorHint="#00000000"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"></ListView>
 
 </RelativeLayout>
