--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_no_address.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_no_address.xml
@@ -8,11 +8,11 @@
     <Button
         android:id="@+id/btn_add_address"
         android:layout_width="240dp"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:layout_centerInParent="true"
         android:text="点我添加新的收货地址"
         android:textSize="20sp"
         android:textColor="#ffffff"
-        android:background="@drawable/btn_shape"/>
+        android:background="#1195db"/>
 
 </RelativeLayout>
