--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_setting.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_setting.xml
@@ -10,9 +10,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <RelativeLayout
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="240dp"
-            android:background="#ffffff"
+            android:background="#00000000"
             android:layout_gravity="center_vertical">
             <ImageView
                 android:id="@+id/iv_personal_info_setting_logo"
@@ -34,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:background="#ffffff">
+            android:background="#00000000">
             <TextView
                 android:id="@+id/tv_info_setting_update"
                 android:layout_width="120dp"
