--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_top_bar.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_top_bar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="#06b7fc"
+    android:background="#0e932e"
     android:clipToPadding="true"
     android:fitsSystemWindows="true" >
 
