--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order.xml
@@ -2,6 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
     <include layout="@layout/activity_top_bar" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="wodedingdan"/>
 </RelativeLayout>
