[kitchen]添加网络请求层，解析首页数据并正确显示到ui上

--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_home.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_home.xml
@@ -37,6 +37,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/tv_address"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:drawableEnd="@drawable/ic_pull_down"
