--- a/QianJiaJia-kitchen/app/src/main/res/layout/listitem_home_product_list.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/listitem_home_product_list.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="230dp"
     android:orientation="vertical"
     android:padding="6dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/con_font_gray"
         android:layout_weight="1">
 
         <TextView
+            android:id="@+id/is_you_hui"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/product_youhui_shape"
@@ -21,6 +21,7 @@
             android:textSize="16sp" />
 
         <ImageView
+            android:id="@+id/pro_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_up"
@@ -31,10 +32,11 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/pro_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:gravity="center_vertical"
+        android:gravity="center_horizontal"
         android:lines="2"
         android:text="纯正俄罗斯鸭块芋头"
         android:textSize="16sp" />
@@ -45,11 +47,12 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tv_line"
             android:layout_width="match_parent"
             android:layout_centerInParent="true"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:gravity="center_vertical"
+            android:gravity="center_horizontal"
             android:text="----------"
             android:lines="1"
             android:textSize="16sp"
@@ -58,11 +61,12 @@
             android:layout_alignParentStart="true" />
 
         <TextView
+            android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_centerInParent="true"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:gravity="center_vertical"
+            android:gravity="center_horizontal"
             android:text="¥56.67"
             android:lines="1"
             android:textSize="16sp"
@@ -78,6 +82,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/discount_price"
             android:layout_width="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -91,6 +96,7 @@
             android:textSize="18sp" />
 
         <ImageButton
+            android:id="@+id/pro_add_btn"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_width="40dp"
